@@ -17,13 +17,7 @@
     <my.mainclass>org.zeroturnaround.demoapps.swing.Main</my.mainclass>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
-    </dependency>
-  </dependencies>
+  <dependencies />
 
   <build>
     <plugins>
@@ -45,46 +39,17 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.2</version>
 
-
         <configuration>
           <executable>java</executable>
           <arguments>
             <argument>-classpath</argument>
             <classpath />
-            <argument>-noverify</argument>
-            <!-- 
-            <argument>-Drebel.myjrebel.host=my.fakesite.com</argument>
-            <argument>-Drebel.notification.url=http://127.0.0.1:44573/jrebel/notifications</argument>
-            <argument>-Drebel.license.url=http://localhost:9001/8b8c6322-8d48-4a65-ade2-a721f144c61a</argument>           
-            <argument>-Drebel.license.url=http://localhost:8080/f351c345-4857-420a-8dc9-8780bb8e0f55</argument>
-            -->
-
-            <!-- test garbage collection -->
-            <!-- 
-            <argument>-verbose:gc</argument>
-            <argument>-XX:+PrintGCTimeStamps</argument>
-            <argument>-XX:+PrintGCDetails</argument>
-            <argument>-Xloggc:my-gc-logfile.log</argument>
-            -->
             
             <!-- logging -->
             <!--  
             <argument>-Drebel.log=true</argument>
             -->
-            <argument>-javaagent:/opt/jrebel/jrebel.jar</argument>
-
-            <!-- 
-            <argument>-Drebel.myjrebel.host=my.fakesite.com</argument>
-            <argument>-Drebel.log.trace=true</argument>
-            <argyument>-Drebel.licensing.async=true</argyument>
-            -->
-            
-            <!-- debugguer -->
-            <!-- 
-            <argument>-Xdebug</argument>
-            <argument>-Xrunjdwp:transport=dt_socket,address=63040,suspend=n,server=y</argument>
-            -->
-            
+            <argument>-javaagent:${user.home}/jrebel.jar</argument>
             <argument>org.zeroturnaround.demoapps.swing.Main</argument>
           </arguments>
         </configuration>
@@ -100,8 +65,6 @@
 
       </plugin>
 
-<!-- 
-      -->
       <plugin>
         <groupId>org.zeroturnaround</groupId>
         <artifactId>jrebel-maven-plugin</artifactId>
